// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
}

enum UserRole {
  APPLICANT
  OFFICER
  ADMIN
}

enum ApplicationStatus {
  SUBMITTED
  UNDER_REVIEW
  APPROVED
  REJECTED
  REQUIRES_CORRECTION
  PENDING_APPROVAL
}

enum Department {
  BUILDING
  BUSINESS
  ENVIRONMENTAL
  ROADS
  EVENTS
  GENERAL
}

enum DocumentStatus {
  PENDING
  APPROVED
  REJECTED
}

enum PaymentStatus {
  PENDING
  PAID
  FAILED
  WAIVED
}

enum PaymentType {
  APPLICATION
  PERMIT
}

enum WithdrawalStatus {
  PENDING
  PROCESSING
  COMPLETED
  FAILED
  CANCELLED
}

enum WithdrawalMethodType {
  BANK_ACCOUNT
  MOBILE_MONEY
}

model PermitType {
  id              String             @id @default(cuid())
  code            String             @unique
  name            String
  description     String?            @db.Text
  applicationFee  Decimal            @default(0) @db.Decimal(10, 2)
  permitFee       Decimal            @default(0) @db.Decimal(10, 2)
  validityMonths  Int                @default(12)
  currency        String             @default("MWK")
  department      Department         @default(GENERAL)
  createdAt       DateTime           @default(now())
  updatedAt       DateTime           @updatedAt

  requirements    PermitRequirement[]
  applications    PermitApplication[]
}

model PermitRequirement {
  id           String    @id @default(cuid())
  key          String
  label        String
  description  String?   @db.Text
  required     Boolean   @default(true)
  sortOrder    Int       @default(0)
  acceptMime   String?
  acceptExt    String?
  createdAt    DateTime  @default(now())
  updatedAt    DateTime  @updatedAt

  permitTypeId String
  permitType   PermitType @relation(fields: [permitTypeId], references: [id], onDelete: Cascade)

  documents    Document[]

  @@unique([permitTypeId, key])
}

model User {
  id            String    @id @default(cuid())
  name          String?
  email         String    @unique
  emailVerified DateTime?
  image         String?
  password      String?
  role          UserRole  @default(APPLICANT)
  phone         String?
  organization  String?
  department   Department @default(GENERAL)
  supabaseId    String?   @unique
  createdAt     DateTime  @default(now())
  updatedAt     DateTime  @updatedAt

  accounts     Account[]
  sessions     Session[]
  applications PermitApplication[] @relation("ApplicantApplications")
  reviews      PermitApplication[] @relation("OfficerReviews")
  comments     Comment[]
  notifications Notification[]
  reviewTokens  ReviewToken[]
  paymentMethods PaymentMethod[]
  withdrawals  Withdrawal[]
  chatSessions  ChatSession[]
  auditLogs     AuditLog[]
}

model Account {
  id                String  @id @default(cuid())
  userId            String
  type              String
  provider          String
  providerAccountId String
  refresh_token     String? @db.Text
  access_token      String? @db.Text
  expires_at        Int?
  token_type        String?
  scope             String?
  id_token          String? @db.Text
  session_state     String?

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@unique([provider, providerAccountId])
}

model Session {
  id           String   @id @default(cuid())
  sessionToken String   @unique
  userId       String
  expires      DateTime
  user         User     @relation(fields: [userId], references: [id], onDelete: Cascade)
}

model VerificationToken {
  identifier String
  token      String   @unique
  expires    DateTime

  @@unique([identifier, token])
}

model PermitApplication {
  id          String            @id @default(cuid())
  permitType  String
  permitTypeId String?
  permitTypeRef PermitType? @relation(fields: [permitTypeId], references: [id])
  description String            @db.Text
  location    String
  latitude    Float?
  longitude   Float?
  status      ApplicationStatus @default(SUBMITTED)
  
  applicantId String
  applicant   User   @relation("ApplicantApplications", fields: [applicantId], references: [id])
  
  officerId   String?
  officer     User?  @relation("OfficerReviews", fields: [officerId], references: [id])
  
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt
  reviewedAt  DateTime?
  approvedAt  DateTime?

  documents     Document[]
  comments      Comment[]
  certificate   Certificate?
  timeline      TimelineEvent[]
  payments      Payment[]
  reviewTokens  ReviewToken[]
}

model Document {
  id            String         @id @default(cuid())
  name          String
  fileUrl       String
  fileType      String
  fileSize      Int
  status        DocumentStatus @default(PENDING)
  reviewNotes   String?

  requirementId String?
  requirement   PermitRequirement? @relation(fields: [requirementId], references: [id])

  applicationId String
  application   PermitApplication @relation(fields: [applicationId], references: [id], onDelete: Cascade)
  createdAt     DateTime          @default(now())
  updatedAt     DateTime          @updatedAt
}

model Comment {
  id            String   @id @default(cuid())
  content       String   @db.Text
  isInternal    Boolean  @default(false)
  applicationId String
  application   PermitApplication @relation(fields: [applicationId], references: [id], onDelete: Cascade)
  authorId      String
  author        User     @relation(fields: [authorId], references: [id])
  createdAt     DateTime @default(now())
}

model Certificate {
  id            String   @id @default(cuid())
  certificateNo String   @unique
  qrCode        String   @db.Text
  issueDate     DateTime @default(now())
  expiryDate    DateTime
  applicationId String   @unique
  application   PermitApplication @relation(fields: [applicationId], references: [id], onDelete: Cascade)
  downloadCount Int      @default(0)
  createdAt     DateTime @default(now())
}

model TimelineEvent {
  id            String            @id @default(cuid())
  event         String
  description   String?
  status        ApplicationStatus
  applicationId String
  application   PermitApplication @relation(fields: [applicationId], references: [id], onDelete: Cascade)
  createdAt     DateTime          @default(now())
}

model Payment {
  id            String        @id @default(cuid())
  txRef         String        @unique
  type          PaymentType   @default(APPLICATION)
  amount        Decimal       @db.Decimal(10, 2)
  currency      String        @default("MWK")
  status        PaymentStatus @default(PENDING)
  paychanguTxId String?
  applicationId String
  application   PermitApplication @relation(fields: [applicationId], references: [id], onDelete: Cascade)
  createdAt     DateTime      @default(now())
  updatedAt     DateTime      @updatedAt

  @@unique([applicationId, type])
}

model Notification {
  id        String   @id @default(cuid())
  userId    String
  user      User     @relation(fields: [userId], references: [id], onDelete: Cascade)
  title     String
  message   String   @db.Text
  type      String
  read      Boolean  @default(false)
  link      String?
  createdAt DateTime @default(now())
}

model ReviewToken {
  id            String   @id @default(cuid())
  token         String   @unique @default(cuid())
  applicationId String
  application   PermitApplication @relation(fields: [applicationId], references: [id], onDelete: Cascade)
  officerId     String
  officer       User     @relation(fields: [officerId], references: [id], onDelete: Cascade)
  action        String
  used          Boolean  @default(false)
  expiresAt     DateTime
  createdAt     DateTime @default(now())
}

model PaymentMethod {
  id              String             @id @default(cuid())
  adminId         String
  admin           User               @relation(fields: [adminId], references: [id], onDelete: Cascade)
  type            WithdrawalMethodType
  details         Json               // Stores bank account or mobile money details
  isDefault       Boolean            @default(false)
  isActive        Boolean            @default(true)
  createdAt       DateTime           @default(now())
  updatedAt       DateTime           @updatedAt

  withdrawals     Withdrawal[]

  @@index([adminId])
}

model Withdrawal {
  id              String            @id @default(cuid())
  adminId         String
  admin           User              @relation(fields: [adminId], references: [id], onDelete: Cascade)
  paymentMethodId String
  paymentMethod   PaymentMethod     @relation(fields: [paymentMethodId], references: [id])
  amount          Decimal           @db.Decimal(10, 2)
  currency        String            @default("MWK")
  status          WithdrawalStatus  @default(PENDING)
  reference       String?           // External transaction reference
  notes           String?           @db.Text
  processedAt     DateTime?
  createdAt       DateTime          @default(now())
  updatedAt       DateTime          @updatedAt

  @@index([adminId])
  @@index([status])
}

model ChatSession {
  id            String    @id @default(cuid())
  userId        String
  user          User      @relation(fields: [userId], references: [id], onDelete: Cascade)
  title         String    // Auto-generated title from first message
  summary       String?   @db.Text // Compact summary for AI context
  provider      String    @default("groq")
  messageCount  Int       @default(0)
  createdAt     DateTime  @default(now())
  updatedAt     DateTime  @updatedAt

  messages      ChatMessage[]

  @@index([userId])
  @@index([updatedAt])
}

model ChatMessage {
  id            String    @id @default(cuid())
  sessionId     String
  session       ChatSession @relation(fields: [sessionId], references: [id], onDelete: Cascade)
  role          String    // "user" | "assistant"
  content       String    @db.Text
  createdAt     DateTime  @default(now())

  @@index([sessionId])
  @@index([createdAt])
}

model AuditLog {
  id            String    @id @default(cuid())
  userId        String
  user          User      @relation(fields: [userId], references: [id])
  action        String    // "CREATE", "UPDATE", "DELETE", "APPROVE", "REJECT", etc.
  entityType    String    // "APPLICATION", "USER", "PERMIT_TYPE", "WITHDRAWAL", "CERTIFICATE"
  entityId      String    // ID of the affected entity
  description   String?   @db.Text
  metadata      Json?     // Additional context (before/after values, IP, etc.)
  createdAt     DateTime  @default(now())

  @@index([userId])
  @@index([entityType])
  @@index([entityId])
  @@index([createdAt])
}
