@startuml class-diagram
!theme vibrant
skinparam classBackgroundColor #EEF2FF
skinparam classBorderColor #6366F1
skinparam classFontColor #111827
skinparam classHeaderBackgroundColor #C7D2FE
skinparam classHeaderFontColor #111827
skinparam classAttributeFontColor #111827
skinparam classStereotypeFontColor #111827
skinparam arrowColor #6366F1
skinparam defaultFontName Segoe UI
skinparam defaultFontSize 10
skinparam defaultFontColor #111827
skinparam shadowing false
skinparam linetype ortho
top to bottom direction
skinparam noteBackgroundColor #FFFBEB
skinparam noteBorderColor #F59E0B
skinparam noteFontColor #111827

title Council Permit Portal — Class Diagram

class User {
  id
  name
  email
  role : APPLICANT | OFFICER | ADMIN
  phone
}

class PermitType {
  id
  name
  description
  fee
  processingDays
  isActive
}

class PermitRequirement {
  id
  permitTypeId
  label
  description
  isRequired
}

class PermitApplication {
  id
  applicantId
  permitTypeId
  officerId
  status : DRAFT | SUBMITTED | UNDER_REVIEW
  submittedAt
  decidedAt
}

class Document {
  id
  applicationId
  requirementId
  fileName
  fileUrl
  status : PENDING | APPROVED | REJECTED | RE_UPLOAD_REQUESTED
  reviewedAt
}

class Payment {
  id
  applicationId
  amount
  currency
  status : PENDING | COMPLETED | FAILED | REFUNDED
  reference
  paidAt
}

class Comment {
  id
  applicationId
  authorId
  content
  isInternal
  createdAt
}

class Certificate {
  id
  applicationId
  certificateNumber
  issuedAt
  expiresAt
  fileUrl
}

class TimelineEvent {
  id
  applicationId
  actorId
  event
  description
  createdAt
}

class ReviewToken {
  id
  applicationId
  adminEmail
  token
  decision : APPROVED | REJECTED
  usedAt
  expiresAt
}

class ChatSession {
  id
  userId
  title
  createdAt
}

class ChatMessage {
  id
  sessionId
  role : USER | ASSISTANT
  content
  createdAt
}

class Withdrawal {
  id
  applicationId
  requestedById
  reason
  status : PENDING | APPROVED | REJECTED
  decidedAt
}

class AuditLog {
  id
  actorId
  action
  entityType
  entityId
  details
  createdAt
}

class Notification {
  id
  userId
  title
  message
  isRead
  createdAt
}

' ─── Relationships ─────────────────────────────────────────
User              "1" -- "many"  PermitApplication : applies
User              "1" -- "many"  Comment           : writes
User              "1" -- "many"  AuditLog          : triggers
User              "1" -- "many"  ChatSession       : has
User              "1" -- "many"  Notification      : receives

PermitType        "1" -- "many"  PermitRequirement : defines
PermitType        "1" -- "many"  PermitApplication : categorises

PermitApplication "1" -- "many"  Document      : contains
PermitApplication "1" -- "1"     Payment       : has
PermitApplication "1" -- "many"  Comment       : has
PermitApplication "1" -- "1"     Certificate   : produces
PermitApplication "1" -- "many"  TimelineEvent : records
PermitApplication "1" -- "0..1"  ReviewToken   : uses
PermitApplication "1" -- "0..1"  Withdrawal    : may have

Document          "many" -- "1"  PermitRequirement : fulfils

ChatSession       "1" -- "many"  ChatMessage : contains

@enduml
